# classwise-calibration-experiments

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
notebooks/: combine_results.ipynb  deit_rvl_cdip.ipynb  distilbert_imdb.ipynb  lightgbm_sorel20m.ipynb  random_forest_synthetic.ipynb  resnet56_cifar10.ipynb
scripts/: generate_notebooks.sh
src/: constants.py
src/data_and_models/: resnet.py  rvl_cdip.py  sorel20m.py
src/experiments/: __init__.py  combine_results.py  deit_rvl_cdip.py  distilbert_imdb.py  lightgbm_sorel20m.py  random_forest_synthetic.py  resnet56_cifar10.py
src/utils/: __init__.py  calibration.py  evaluation.py  other.py  plots.py  summary.py
