[tool.poetry]
name = "class-wise-and-reduced-calibration-methods"
version = "0.1.0"
description = "This repository contains the experiment for the \"class-wise and reduced calibration methods\" paper submitted to ICMLA 2022"
authors = ["appliedAI GmbH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "1.4.1"
numpy = "1.22.2"
scikit-learn = "1.0.2"
kyle-calibration = "0.1.6"
lightgbm = "3.3.2"
torch = "1.11"
jupyterlab = "3.2.9"
ipywidgets = "7.6.5"
tqdm = "4.62.3"
graphviz = "0.19.1"
lmdb = "1.3.0"
msgpack = "0.6.2"
Pillow = "9.0.1"
transformers = "4.17.0"
datasets = "2.1.0"
matplotlib = "3.5.1"
seaborn = "0.11.2"
optuna = "2.10.0"
ipympl = "0.8.8"
torchvision = "0.12.0"
kornia = "0.6.4"
papermill = "2.3.4"
torchtext = "0.12.0"
torchdata = "0.3.0"
pytorch-lightning = "1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
