[tool.poetry]
name = "class-wise-and-reduced-calibration-methods"
version = "0.1.0"
description = "This repository contains the experiment for the \"class-wise and reduced calibration methods\" paper submitted to ICMLA 2022"
authors = ["appliedAI GmbH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "1.4.1"
numpy = "1.22.2"
scikit-learn = "1.0.2"
kyle-calibration = "0.1.6"
lightgbm = "3.3.2"
torch = "1.11"
ipywidgets = "7.6.5"
tqdm = "4.62.3"
graphviz = "0.19.1"
lmdb = "1.3.0"
msgpack = "0.6.2"
Pillow = "9.0.1"
transformers = "4.17.0"
datasets = "2.1.0"
matplotlib = "3.5.1"
seaborn = "0.11.2"
optuna = "2.10.0"
ipympl = "0.8.8"
torchvision = "0.12.0"
kornia = "0.6.4"
torchtext = "0.12.0"
torchdata = "0.3.0"
pytorch-lightning = "1.6.4"
boto3 = "1.21.6"
gdown = "4.4.0"
requests = "2.27.1"
notebook = "^6.4.12"
jupytext = "^1.14.1"
sphinx-gallery = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
